// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      Webpack App
    </title>
    <link href="main.css"
          rel="stylesheet"
    >
  </head>
  <body>
    <script type="text/javascript"
            src="main.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
             src="main.js"
     >
     </script>
+    <div>
+      <style type="text/css">
+        body{margin:0;padding:0;background:#eee}
+      </style>
+      <div class="FYwKg _1zzbR_2 _1P-NR_2 A_W7V_2 _2BiXP_2 _1KDXK_2">
+        <span class="FYwKg _28iNm C6ZIU_2 _3nVJR_2 ELZOd_2 _29m7__2 _26NdQ_2 _3LFeA_2">
+          Is it working?
+        </span>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
Object {
  "index.html": <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      Webpack App
    </title>
    <link href="main.css"
          rel="stylesheet"
    >
  </head>
  <body>
    <script type="text/javascript"
            src="main.js"
    >
    </script>
  </body>
</html>,
  "main.css": .FYwKg {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
._3j_fQ {
  display: block;
}
._19GyU {
  line-height: 1;
}
._302h6 {
  list-style: none;
}
._JRzj {
  quotes: none;
}
._JRzj:after,
._JRzj:before {
  content: "";
}
._2RYN8 {
  border-collapse: collapse;
  border-spacing: 0;
}
._2PHih {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
._3JHxg {
  background-color: transparent;
  color: inherit;
}
._3sxhA::-ms-expand {
  display: none;
}
._1ZS7q {
  background: none;
}
._3M9FM {
  border-radius: 100%;
}
._2sA6r {
  width: 100%;
}
._2y2Cx {
  height: 100%;
}
.myA79 {
  position: absolute;
}
._1h9Q4 {
  position: relative;
}
._2irqO {
  position: fixed;
}
._28iNm {
  display: block;
}
.Wdx2A {
  display: inline;
}
.bMBHP {
  display: none;
}
._1WtCj {
  display: inline-block;
}
._2UQVt {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
._1YmyE {
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
}
._3AmPl {
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
._85X-f {
  -webkit-align-items: flex-end;
  -ms-flex-align: end;
  align-items: flex-end;
}
._3qe3T {
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}
._2MoP5 {
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}
._3vC6V {
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}
._3bs8w {
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}
._3wq8F {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}
._2Vx0m {
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}
._2iXTz {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}
._16HkC {
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}
._1XC4P {
  cursor: pointer;
}
._3eOzq {
  pointer-events: none;
}
._3O7Hk_2 {
  margin-top: 24px;
}
._1SxZY_2 {
  margin-top: 4px;
}
._3RtnC_2 {
  margin-top: 8px;
}
._28qcu_2 {
  margin-top: 12px;
}
._1WMOl_2 {
  margin-top: 20px;
}
._1R5V9_2 {
  margin-top: 32px;
}
._1z6Q5_2 {
  margin-top: 48px;
}
._1q5g-_2 {
  margin-top: 96px;
}
._38Fxk_2 {
  margin-top: 0;
}
._1A-42_2 {
  margin-bottom: 24px;
}
.oWGiI_2 {
  margin-bottom: 4px;
}
._1fD1J_2 {
  margin-bottom: 8px;
}
.xqsly_2 {
  margin-bottom: 12px;
}
._36UVG_2 {
  margin-bottom: 20px;
}
.sZZbp_2 {
  margin-bottom: 32px;
}
._1nSEO_2 {
  margin-bottom: 48px;
}
._27IRp_2 {
  margin-bottom: 96px;
}
._2nbnz_2 {
  margin-bottom: 0;
}
._2DJr0_2 {
  margin-left: 24px;
}
._2QFx4_2 {
  margin-left: 4px;
}
._37N5v_2 {
  margin-left: 8px;
}
._3SYGO_2 {
  margin-left: 12px;
}
.r4lkh_2 {
  margin-left: 20px;
}
._2-w9p_2 {
  margin-left: 32px;
}
._32O-K_2 {
  margin-left: 48px;
}
._34yqd_2 {
  margin-left: 96px;
}
._4bkQd_2 {
  margin-left: 0;
}
.YI7h2_2 {
  margin-right: 24px;
}
._1HXdc_2 {
  margin-right: 4px;
}
._2NUVr_2 {
  margin-right: 8px;
}
._7zeRd_2 {
  margin-right: 12px;
}
._1ltQk_2 {
  margin-right: 20px;
}
._21e2J_2 {
  margin-right: 32px;
}
._3k_Tt_2 {
  margin-right: 48px;
}
._2oTDE_2 {
  margin-right: 96px;
}
._2Rh8D_2 {
  margin-right: 0;
}
._3M7JL_2 {
  padding-top: 24px;
}
._2Lhjc_2 {
  padding-top: 4px;
}
._3zrgB_2 {
  padding-top: 8px;
}
._3pY8F_2 {
  padding-top: 12px;
}
._3PIf5_2 {
  padding-top: 20px;
}
._1P-NR_2 {
  padding-top: 32px;
}
.wSANN_2 {
  padding-top: 48px;
}
._5-scC_2 {
  padding-top: 96px;
}
.nVpca_2 {
  padding-top: 0;
}
._3jZnI_2 {
  padding-bottom: 24px;
}
._1z3zi_2 {
  padding-bottom: 4px;
}
._3w3Mg_2 {
  padding-bottom: 8px;
}
._323xp_2 {
  padding-bottom: 12px;
}
.WUd7g_2 {
  padding-bottom: 20px;
}
.A_W7V_2 {
  padding-bottom: 32px;
}
._1Pq9s_2 {
  padding-bottom: 48px;
}
._1INCF_2 {
  padding-bottom: 96px;
}
._1ozIG_2 {
  padding-bottom: 0;
}
._2BiXP_2 {
  padding-left: 24px;
}
._1oqFg_2 {
  padding-left: 4px;
}
._3yptL_2 {
  padding-left: 8px;
}
._1-09X_2 {
  padding-left: 12px;
}
._3HXR4_2 {
  padding-left: 20px;
}
._3oGpZ_2 {
  padding-left: 32px;
}
._1LBwK_2 {
  padding-left: 48px;
}
._1ZT1r_2 {
  padding-left: 96px;
}
._3URw2_2 {
  padding-left: 0;
}
._1KDXK_2 {
  padding-right: 24px;
}
._36HUC_2 {
  padding-right: 4px;
}
._3-vsk_2 {
  padding-right: 8px;
}
._2fCG7_2 {
  padding-right: 12px;
}
.IXQvt_2 {
  padding-right: 20px;
}
._1W0oy_2 {
  padding-right: 32px;
}
._2IZB9_2 {
  padding-right: 48px;
}
._3HNgy_2 {
  padding-right: 96px;
}
._34NUK_2 {
  padding-right: 0;
}
.hNtSj_2:active {
  -webkit-transform: scale(0.95);
  transform: scale(0.95);
}
._2X729_2 {
  transition: opacity 0.125s ease, -webkit-transform 0.125s ease;
  transition: transform 0.125s ease, opacity 0.125s ease;
  transition: transform 0.125s ease, opacity 0.125s ease,
    -webkit-transform 0.125s ease;
}
._1gxNg_2 {
  transition: -webkit-transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  transition: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  transition: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235),
    -webkit-transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
}
.ECqs-_2 {
  border-radius: 2px;
}
._1yPon_2 {
  width: 48px;
}
._2JU1c_2 {
  height: 48px;
}
.JNERa_2 {
  background: #0d3880;
}
._2Qd5S_2 {
  background: #fff;
}
.Gqzz8_2 {
  background: #eee;
}
._1hR34_2 {
  background: #e60278;
}
.ggKXF_2 {
  background: #2765cf;
}
.o9coJ_2 {
  background: #ccc;
}
.xgU4M_2 {
  background: #eee;
}
._1zzbR_2 {
  background: #fff;
}
._2OnNp_2 {
  background: #e60278;
}
.goG5m_2 {
  background: #9556b7;
}
.ceaKl_2 {
  background: #169400;
}
._1MzW0_2 {
  background: #747474;
}
._1J2OH_2 {
  background: #235bba;
}
._34Q9p_2 {
  background: #3672d9;
}
.Fh0Qw_2 {
  background: #cd026b;
}
._2EeQI_2 {
  background: #fd0585;
}
._1uQv2_2 {
  background: #f1edf3;
}
._2t3FT_2 {
  background: #f7e9f0;
}
._2lzZV_2 {
  background: #ebf6e9;
}
._2tf8n_2 {
  background: #f0f0f0;
}
._2XDJc_2 {
  box-shadow: 0 9px 30px rgba(0, 0, 0, 0.4);
}
.LZYzT_2 {
  box-shadow: 0 0 0 2px rgba(30, 144, 255, 0.7);
}
._2tvCZ_2 {
  box-shadow: inset 0 0 0 1px #d6d6d6;
}
._3C1KL_2 {
  box-shadow: inset 0 0 0 1px #e60278;
}
._1VVPa_2 {
  box-shadow: inset 0 0 0 1px #2765cf;
}
._2NQHE_2 {
  box-shadow: inset 0 0 0 2px #2765cf;
}
@media screen and (min-width: 740px) {
  ._14h-M_2 {
    margin-top: 24px;
  }
  ._1lay8_2 {
    margin-top: 4px;
  }
  ._38RwL_2 {
    margin-top: 8px;
  }
  ._345RP_2 {
    margin-top: 12px;
  }
  ._2gSgt_2 {
    margin-top: 20px;
  }
  ._2AYjA_2 {
    margin-top: 32px;
  }
  ._3mKRM_2 {
    margin-top: 48px;
  }
  ._3HTMY_2 {
    margin-top: 96px;
  }
  ._2oSGv_2 {
    margin-top: 0;
  }
  ._2zYH7_2 {
    margin-bottom: 24px;
  }
  .BvdG9_2 {
    margin-bottom: 4px;
  }
  ._2AgkV_2 {
    margin-bottom: 8px;
  }
  .oBDA8_2 {
    margin-bottom: 12px;
  }
  ._1K5PL_2 {
    margin-bottom: 20px;
  }
  ._3mokp_2 {
    margin-bottom: 32px;
  }
  ._14uV5_2 {
    margin-bottom: 48px;
  }
  .AmO4v_2 {
    margin-bottom: 96px;
  }
  .bOHpt_2 {
    margin-bottom: 0;
  }
  ._3WSKx_2 {
    margin-left: 24px;
  }
  ._3eAc7_2 {
    margin-left: 4px;
  }
  ._2JEWg_2 {
    margin-left: 8px;
  }
  ._2clZw_2 {
    margin-left: 12px;
  }
  ._27kU__2 {
    margin-left: 20px;
  }
  ._3cO5P_2 {
    margin-left: 32px;
  }
  .jeent_2 {
    margin-left: 48px;
  }
  ._17MAN_2 {
    margin-left: 96px;
  }
  ._19Nxj_2 {
    margin-left: 0;
  }
  .fufMs_2 {
    margin-right: 24px;
  }
  ._3ORIb_2 {
    margin-right: 4px;
  }
  ._2F2gY_2 {
    margin-right: 8px;
  }
  ._1e-78_2 {
    margin-right: 12px;
  }
  ._3MnCE_2 {
    margin-right: 20px;
  }
  ._3mf68_2 {
    margin-right: 32px;
  }
  ._2ALh7_2 {
    margin-right: 48px;
  }
  ._2Opts_2 {
    margin-right: 96px;
  }
  .VyNNG_2 {
    margin-right: 0;
  }
  .fB92N_2 {
    padding-top: 24px;
  }
  ._11hx2_2 {
    padding-top: 4px;
  }
  ._1xfPS_2 {
    padding-top: 8px;
  }
  .zoxBO_2 {
    padding-top: 12px;
  }
  ._6Gmbl_2 {
    padding-top: 20px;
  }
  ._3gJU3_2 {
    padding-top: 32px;
  }
  ._7dJpR_2 {
    padding-top: 48px;
  }
  ._3L64u_2 {
    padding-top: 96px;
  }
  ._17IyL_2 {
    padding-top: 0;
  }
  ._1pAdR_2 {
    padding-bottom: 24px;
  }
  .JPP2m_2 {
    padding-bottom: 4px;
  }
  ._2-ij9_2 {
    padding-bottom: 8px;
  }
  ._3qNSL_2 {
    padding-bottom: 12px;
  }
  ._3j1Zv_2 {
    padding-bottom: 20px;
  }
  ._36Yi4_2 {
    padding-bottom: 32px;
  }
  ._1w3ey_2 {
    padding-bottom: 48px;
  }
  ._27UZa_2 {
    padding-bottom: 96px;
  }
  ._3oVlh_2 {
    padding-bottom: 0;
  }
  .FLByR_2 {
    padding-left: 24px;
  }
  ._1kpH2_2 {
    padding-left: 4px;
  }
  ._3Vcu7_2 {
    padding-left: 8px;
  }
  ._3RqUb_2 {
    padding-left: 12px;
  }
  .sDUog_2 {
    padding-left: 20px;
  }
  ._3wXaW_2 {
    padding-left: 32px;
  }
  ._255Zy_2 {
    padding-left: 48px;
  }
  ._2ffuN_2 {
    padding-left: 96px;
  }
  .hLznC_2 {
    padding-left: 0;
  }
  ._2QIfI_2 {
    padding-right: 24px;
  }
  ._2scYw_2 {
    padding-right: 4px;
  }
  .MtsXR_2 {
    padding-right: 8px;
  }
  ._1YKq0_2 {
    padding-right: 12px;
  }
  ._1yTEl_2 {
    padding-right: 20px;
  }
  ._2twe9_2 {
    padding-right: 32px;
  }
  ._1IjAr_2 {
    padding-right: 48px;
  }
  ._1HSSo_2 {
    padding-right: 96px;
  }
  ._36-qN_2 {
    padding-right: 0;
  }
  ._1nNV6_2 {
    display: block;
  }
  ._3f7MY_2 {
    display: inline;
  }
  ._10z6g_2 {
    display: none;
  }
  .OQuEk_2 {
    display: inline-block;
  }
  ._1Hvwd_2 {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
  ._2WXaR_2 {
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
  }
  ._3B00S_2 {
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
  }
  ._1ZHAP_2 {
    -webkit-align-items: flex-end;
    -ms-flex-align: end;
    align-items: flex-end;
  }
  ._3XuYF_2 {
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
  ._2wyod_2 {
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
  ._1Scv7_2 {
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
  ._2T_8H_2 {
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
  ._1QLt3_2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
  ._3SIDw_2 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
  .mUg1C_2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
  .hhBFx_2 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
}
.C6ZIU_2 {
  font-family: Roboto, Helvetica Neue, HelveticaNeue, Helvetica, Arial,
    sans-serif;
}
._29m7__2 {
  font-weight: 400;
}
._2CELK_2 {
  font-weight: 500;
}
.sQuda_2 {
  font-weight: 700;
}
._3oZ0H_2 {
  font-size: 12px;
  line-height: 20px;
}
.xvwS0_2 {
  -webkit-transform: translateY(0.4983333333333334em);
  transform: translateY(0.4983333333333334em);
}
._1_nER_2 {
  padding-top: 1px;
}
._1_nER_2:before {
  content: "";
  margin-top: -13px;
  display: block;
  height: 0;
}
._1PM5y_2 {
  font-size: 14px;
  line-height: 20px;
}
._6ufcS_2 {
  -webkit-transform: translateY(0.37928571428571434em);
  transform: translateY(0.37928571428571434em);
}
._2WTa0_2 {
  padding-top: 1px;
}
._2WTa0_2:before {
  content: "";
  margin-top: -9px;
  display: block;
  height: 0;
}
._8QVx6_2 {
  font-size: 16px;
  line-height: 24px;
}
._3srVf_2 {
  -webkit-transform: translateY(0.41500000000000004em);
  transform: translateY(0.41500000000000004em);
}
._30vru_2 {
  padding-top: 1px;
}
._30vru_2:before {
  content: "";
  margin-top: -13px;
  display: block;
  height: 0;
}
._3nVJR_2 {
  font-size: 18px;
  line-height: 28px;
}
._26NdQ_2 {
  -webkit-transform: translateY(0.4427777777777778em);
  transform: translateY(0.4427777777777778em);
}
._3LFeA_2 {
  padding-top: 1px;
}
._3LFeA_2:before {
  content: "";
  margin-top: -17px;
  display: block;
  height: 0;
}
._1H36Y_2 {
  font-weight: 400;
}
._1NXQv_2 {
  font-weight: 500;
}
._642YY_2 {
  font-size: 28px;
  line-height: 36px;
}
._2k6I7_2 {
  -webkit-transform: translateY(0.30785714285714294em);
  transform: translateY(0.30785714285714294em);
}
._2VCbC_2 {
  padding-top: 1px;
}
._2VCbC_2:before {
  content: "";
  margin-top: -17px;
  display: block;
  height: 0;
}
._1VMf3_2 {
  font-size: 21px;
  line-height: 32px;
}
._17ajR_2 {
  -webkit-transform: translateY(0.4269047619047619em);
  transform: translateY(0.4269047619047619em);
}
._6eu7W_2 {
  padding-top: 1px;
}
._6eu7W_2:before {
  content: "";
  margin-top: -17px;
  display: block;
  height: 0;
}
._2ss7s_2 {
  font-size: 21px;
  line-height: 28px;
}
._3J1wB_2 {
  -webkit-transform: translateY(0.33166666666666667em);
  transform: translateY(0.33166666666666667em);
}
._1SuKd_2 {
  padding-top: 1px;
}
._1SuKd_2:before {
  content: "";
  margin-top: -13px;
  display: block;
  height: 0;
}
._1b4Gs_2 {
  font-size: 18px;
  line-height: 28px;
}
._1xFST_2 {
  -webkit-transform: translateY(0.4427777777777778em);
  transform: translateY(0.4427777777777778em);
}
._3MBDC_2 {
  padding-top: 1px;
}
._3MBDC_2:before {
  content: "";
  margin-top: -17px;
  display: block;
  height: 0;
}
.ELZOd_2 {
  color: #1c1c1c;
}
._27Shq_2 {
  color: #2765cf;
}
._2DNlq_2 {
  color: #e60278;
}
.u7OQ5_2 {
  color: #9556b7;
}
._3KSG8_2 {
  color: #169400;
}
._2TpEq_2 {
  color: rgba(28, 28, 28, 0.63);
}
._1QEQt_2 {
  color: #2765cf;
}
._3vlP__2 {
  color: #d1016e;
}
._1weGM_2 {
  color: #148100;
}
._3NFar_2 {
  color: #9050b4;
}
._1E-Nz_2,
._1W_Sg_2,
._2kIc-_2,
._2mc_y_2,
._2RmE6_2,
._11kId_2,
._29LNX_2,
._38cx__2,
.And8z_2,
.Ivzvs_2,
.MxhoO_2 {
  color: #fff;
}
._1NwPE_2,
._1PRnx_2 {
  padding-top: 14px;
  padding-bottom: 14px;
}
._2ZuBk_2 {
  padding-top: 12px;
  padding-bottom: 12px;
}
._292r__2 {
  padding-top: 10px;
  padding-bottom: 10px;
}
@media screen and (min-width: 740px) {
  ._642YY_2 {
    font-size: 42px;
    line-height: 44px;
  }
  ._2k6I7_2 {
    -webkit-transform: translateY(0.18880952380952384em);
    transform: translateY(0.18880952380952384em);
  }
  ._1VMf3_2 {
    font-size: 28px;
    line-height: 36px;
  }
  ._17ajR_2 {
    -webkit-transform: translateY(0.30785714285714294em);
    transform: translateY(0.30785714285714294em);
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      Webpack App
    </title>
    <link href="main.css"
          rel="stylesheet"
    >
  </head>
  <body>
    <script type="text/javascript"
            src="main.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
             src="main.js"
     >
     </script>
+    <div>
+      <style type="text/css">
+        body{margin:0;padding:0;background:#eee}
+      </style>
+      <div class="BRAID__reset-base_FYwKg BRAID__useBoxStyles-background_card_1zzbR_seekAnz BRAID__useBoxStyles-padding_top_large_1P-NR_seekAnz BRAID__useBoxStyles-padding_bottom_large_A_W7V_seekAnz BRAID__useBoxStyles-padding_left_gutter_2BiXP_seekAnz BRAID__useBoxStyles-padding_right_gutter_1KDXK_seekAnz">
+        <span class="BRAID__reset-base_FYwKg BRAID__useBoxStyles-display_block_28iNm BRAID__typography-fontFamily_C6ZIU_seekAnz BRAID__typography-text_large_base_3nVJR_seekAnz BRAID__typography-tone_neutral_ELZOd_seekAnz BRAID__typography-fontWeight_regular_29m7__seekAnz BRAID__typography-text_large_baseline_26NdQ_seekAnz BRAID__typography-text_large_cropFirstLine_3LFeA_seekAnz">
+          Is it working?
+        </span>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
